[gd_scene load_steps=17 format=2]

[ext_resource path="res://Fonts/Roboto-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu/LabelTitle.gd" type="Script" id=2]
[ext_resource path="res://Menu/Menu.gd" type="Script" id=3]
[ext_resource path="res://Menu/PlayButton.gd" type="Script" id=4]
[ext_resource path="res://Menu/CheckBoxVSync.gd" type="Script" id=5]
[ext_resource path="res://Sprites/menu_background.jpg" type="Texture" id=6]
[ext_resource path="res://Menu/ButtonDifficulty.gd" type="Script" id=7]
[ext_resource path="res://Menu/ButtonExit.gd" type="Script" id=8]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 1920, 1200 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 26
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 38
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 800, 600 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPlay" type="Button" parent="."]
anchor_left = 0.1
anchor_top = 0.35
anchor_right = 0.9
anchor_bottom = 0.65
custom_fonts/font = SubResource( 2 )
text = "Play"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonExit" type="Button" parent="."]
anchor_left = 0.45
anchor_top = 0.7
anchor_right = 0.55
anchor_bottom = 0.75
custom_fonts/font = SubResource( 3 )
text = "Exit"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonEasy" type="Button" parent="."]
anchor_left = 0.15
anchor_top = 0.9
anchor_right = 0.25
anchor_bottom = 0.949
custom_fonts/font = SubResource( 4 )
text = "Easy"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMedium" type="Button" parent="."]
anchor_left = 0.35
anchor_top = 0.9
anchor_right = 0.45
anchor_bottom = 0.949
custom_fonts/font = SubResource( 4 )
text = "Medium"
script = ExtResource( 7 )

[node name="ButtonHard" type="Button" parent="."]
anchor_left = 0.55
anchor_top = 0.9
anchor_right = 0.65
anchor_bottom = 0.949
custom_fonts/font = SubResource( 4 )
text = "Hard"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonInsane" type="Button" parent="."]
anchor_left = 0.75
anchor_top = 0.9
anchor_right = 0.85
anchor_bottom = 0.949
custom_fonts/font = SubResource( 4 )
text = "INSANE"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelDifficulty" type="Label" parent="."]
anchor_left = 0.4
anchor_top = 0.8
anchor_right = 0.6
anchor_bottom = 0.864
custom_fonts/font = SubResource( 5 )
text = "Difficulty:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTitle" type="Label" parent="."]
anchor_left = 0.3
anchor_top = 0.1
anchor_right = 0.714
anchor_bottom = 0.3
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PING PONG"
align = 1
valign = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelHelp" type="Label" parent="."]
anchor_left = 0.65
anchor_top = 0.7
anchor_right = 0.9
anchor_bottom = 0.8
custom_fonts/font = SubResource( 7 )
text = "F11 or Ctrl/Cmd + F - toggle fullscreen
Esc - exit to menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelAuthor" type="Label" parent="."]
anchor_left = 0.9
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 7 )
text = "by eXCore"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBoxVsync" type="CheckBox" parent="."]
anchor_left = 0.8
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.2
custom_fonts/font = SubResource( 8 )
text = "Enable VSync?"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ButtonPlay" to="ButtonPlay" method="_on_Button_pressed"]
[connection signal="pressed" from="ButtonExit" to="ButtonExit" method="_on_ButtonExit_pressed"]
[connection signal="pressed" from="ButtonEasy" to="ButtonEasy" method="_on_ButtonDifficulty_pressed"]
[connection signal="pressed" from="ButtonMedium" to="ButtonMedium" method="_on_ButtonDifficulty_pressed"]
[connection signal="pressed" from="ButtonHard" to="ButtonHard" method="_on_ButtonDifficulty_pressed"]
[connection signal="pressed" from="ButtonInsane" to="ButtonInsane" method="_on_ButtonDifficulty_pressed"]
[connection signal="toggled" from="CheckBoxVsync" to="CheckBoxVsync" method="_on_CheckBox_toggled"]
